EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Affl_Mappings__c/fields/hed__Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>hed__Account_Record_Type__c</fullName>
    <description>The label of the Account record type that&apos;s being mapped.</description>
    <inlineHelpText>La etiqueta del tipo de registro Cuenta que se está asignando.</inlineHelpText>
    <label>Account Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>