EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Affl_Mappings__c/fields/hed__Auto_Program_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>hed__Auto_Program_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, a Program Enrollment record is auto created when a user creates an Affiliation record with an Account of this record type.</description>
    <inlineHelpText>Si se selecciona, se crea un registro Inscripción del programa automáticamente cuando el usuario crea un registro Afiliación con una cuenta de este tipo de registro.</inlineHelpText>
    <label>Auto Enrollment</label>
    <type>Checkbox</type>
</CustomField>