EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Affl_Mappings__c/fields/hed__Primary_Affl_Field__c.field-meta.xml
<CustomField>
    <fullName>hed__Primary_Affl_Field__c</fullName>
    <description>The label of the Contact field that holds the value of the primary Account for this record type.</description>
    <inlineHelpText>La etiqueta del campo Contacto que alberga el valor de la cuenta principal para este tipo de registro.</inlineHelpText>
    <label>Primary Affl Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>